# eightid

./: .flake8  CODE_OF_CONDUCT.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yaml  test.yaml
django_app/: settings.py  urls.py
django_app/app/: models.py
src/eightid/: __init__.py  django.py
src/gid/: __init__.py  django.py
tests/: test_django.py  test_eightid.py  test_gid.py
