[tool.poetry]
name = "cid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
isort = "^5.10.1"
pytest-django = "^4.5.2"
flake8 = "^4.0.1"
mypy = "^0.942"
pytest-cov = "^3.0.0"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes --ds=django_app.settings"
testpaths = [
    "src",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
force_grid_wrap = "0"
ensure_newline_before_comments = "True"
include_trailing_comma = "true"
length_sort = "true"
use_parentheses = "true"
force_single_line = "false"
skip_glob = [".venv", "venv"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''